frontend and backend separation

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,7 +7,9 @@
       "esnext"
     ],
     "allowJs": true,
-    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
